placing order issue solved for normal product

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 JWT_SECRET = "greatstack"
-ADMIN_EMAIL = "shaiknadeen111122@gmail.com"
+ADMIN_EMAIL = "shaiknadeen111122"
 ADMIN_PASSWORD = "9948761500"
 
 MONGODB_URI = "mongodb+srv://shaiknadeen111122:9948761500@cluster0.3wt7w.mongodb.net"
