--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 JWT_SECRET = "greatstack"
 ADMIN_EMAIL = "shaiknadeen111122"
-ADMIN_PASSWORD = "9948761500"
+ADMIN_PASSWORD = ""
 
 MONGODB_URI = ""
 
